--- a/SwiftDataAcquisition/Base.lproj/Main.storyboard
+++ b/SwiftDataAcquisition/Base.lproj/Main.storyboard
@@ -20,8 +20,11 @@
                                 <rect key="frame" x="103" y="464.33333333333331" width="208" height="46"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <state key="normal" title="Measurments"/>
+                                <connections>
+                                    <segue destination="KSU-bc-leI" kind="show" id="s1F-Bg-E12"/>
+                                </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="iOS Data Acquistion" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="none" minimumFontSize="15" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9de-Ga-4Uf">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="iOS Data Acquisition" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="none" minimumFontSize="15" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9de-Ga-4Uf">
                                 <rect key="frame" x="20" y="343" width="374" height="50"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                 <nil key="textColor"/>
@@ -30,10 +33,21 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="POLSL_LOGO" translatesAutoresizingMaskIntoConstraints="NO" id="W6b-eY-czG">
                                 <rect key="frame" x="20" y="35" width="374" height="283"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H0l-WU-bjq">
+                                <rect key="frame" x="103" y="603" width="208" height="46"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <state key="normal" title="About"/>
+                                <connections>
+                                    <segue destination="7n0-WN-MpZ" kind="presentation" id="spt-tH-LVh"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="kX7-jy-mbb">
                                 <rect key="frame" x="103" y="535" width="208" height="46"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <state key="normal" title="Files"/>
+                                <connections>
+                                    <segue destination="704-2P-t5E" kind="show" id="dYn-Xd-Uaz"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -41,6 +55,7 @@
                         <constraints>
                             <constraint firstItem="kX7-jy-mbb" firstAttribute="top" secondItem="o8f-x2-ucd" secondAttribute="bottom" constant="24.666666666666686" id="1c0-eP-Ccv"/>
                             <constraint firstItem="W6b-eY-czG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="9eW-Hx-9eT"/>
+                            <constraint firstItem="H0l-WU-bjq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="103" id="DL0-cj-tF7"/>
                             <constraint firstItem="o8f-x2-ucd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="103" id="Jdn-d9-8qY"/>
                             <constraint firstItem="o8f-x2-ucd" firstAttribute="top" secondItem="9de-Ga-4Uf" secondAttribute="bottom" constant="71" id="WCl-90-jIU"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="o8f-x2-ucd" secondAttribute="trailing" constant="103" id="cLD-TF-Qha"/>
@@ -49,8 +64,11 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="kX7-jy-mbb" secondAttribute="bottom" constant="155" id="gPg-wx-27d"/>
                             <constraint firstItem="9de-Ga-4Uf" firstAttribute="top" secondItem="W6b-eY-czG" secondAttribute="bottom" constant="25" id="iXM-eV-Olw"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kX7-jy-mbb" secondAttribute="trailing" constant="103" id="lHa-H1-AfJ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="H0l-WU-bjq" secondAttribute="bottom" constant="87" id="lTH-5K-dbe"/>
+                            <constraint firstItem="H0l-WU-bjq" firstAttribute="top" secondItem="kX7-jy-mbb" secondAttribute="bottom" constant="22" id="p87-sp-8a2"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9de-Ga-4Uf" secondAttribute="trailing" constant="20" id="tYY-nZ-iNp"/>
                             <constraint firstItem="kX7-jy-mbb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="103" id="uL3-cy-eod"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="H0l-WU-bjq" secondAttribute="trailing" constant="103" id="v8e-WW-spH"/>
                             <constraint firstItem="W6b-eY-czG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="35" id="yC1-04-cIf"/>
                             <constraint firstItem="9de-Ga-4Uf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="yNs-qx-r1f"/>
                         </constraints>
@@ -58,18 +76,19 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2271.0144927536235" y="-52.989130434782609"/>
+            <point key="canvasLocation" x="-2268.1159420289855" y="389.67391304347831"/>
         </scene>
         <!--Measurments View-->
         <scene sceneID="bba-kJ-xeX">
             <objects>
                 <viewController id="KSU-bc-leI" customClass="MeasurmentsView" customModule="SwiftDataAcquisition" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Bv4-oo-M8v">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="rhN-Rm-K19"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="IoT-35-ocp"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZVg-at-0cs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -80,26 +99,58 @@
             <objects>
                 <viewController id="704-2P-t5E" customClass="FilesView" customModule="SwiftDataAcquisition" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="vTC-4f-Rw1">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="POLSL_LOGO" translatesAutoresizingMaskIntoConstraints="NO" id="A9h-Ed-TUk">
-                                <rect key="frame" x="20" y="98" width="374" height="282"/>
-                            </imageView>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="0wS-j1-PxI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="A9h-Ed-TUk" firstAttribute="leading" secondItem="0wS-j1-PxI" secondAttribute="leading" constant="20" id="BpX-2Y-w9x"/>
-                            <constraint firstItem="A9h-Ed-TUk" firstAttribute="top" secondItem="0wS-j1-PxI" secondAttribute="top" constant="98" id="atR-Ws-X01"/>
-                            <constraint firstItem="0wS-j1-PxI" firstAttribute="trailing" secondItem="A9h-Ed-TUk" secondAttribute="trailing" constant="20" id="dfu-al-AAr"/>
-                            <constraint firstItem="0wS-j1-PxI" firstAttribute="bottom" secondItem="A9h-Ed-TUk" secondAttribute="bottom" constant="356" id="roQ-7S-boL"/>
-                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="0bA-Vr-d5F"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="miI-H3-g4B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1031.8840579710145" y="390.48913043478262"/>
+        </scene>
+        <!--About View-->
+        <scene sceneID="YrV-aP-5dC">
+            <objects>
+                <viewController id="7n0-WN-MpZ" customClass="AboutView" customModule="SwiftDataAcquisition" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ESj-lN-pyO">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="28h-mn-BPY">
+                                <rect key="frame" x="117" y="439" width="181" height="46"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <segue destination="6yp-Ia-lby" kind="unwind" unwindAction="handleExit:" id="BBS-ob-8Ap"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="14" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rSt-qf-U8P">
+                                <rect key="frame" x="20" y="65" width="374" height="332"/>
+                                <mutableString key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ultricies vitae arcu ac egestas. Aenean sed enim vehicula, molestie nibh non, varius sapien. Etiam volutpat ipsum velit, quis euismod justo rutrum eu. Vestibulum aliquet orci luctus pellentesque tempor. Vivamus vitae bibendum sem. Integer diam turpis, gravida et venenatis ut, rhoncus at arcu. Donec sagittis suscipit tortor, vel pulvinar sapien cursus fringilla. Donec mi ligula, ultrices in convallis et, fermentum sit amet lectus. In hac habitasse platea dictumst. Integer in tincidunt elit, elementum elementum sapien. Sed elementum tincidunt placerat.</mutableString>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="rVK-fP-BSE"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="rSt-qf-U8P" firstAttribute="top" secondItem="rVK-fP-BSE" secondAttribute="top" constant="65" id="1bc-cr-WSd"/>
+                            <constraint firstItem="rVK-fP-BSE" firstAttribute="trailing" secondItem="28h-mn-BPY" secondAttribute="trailing" constant="116" id="6jr-hP-Mbc"/>
+                            <constraint firstItem="28h-mn-BPY" firstAttribute="top" secondItem="rSt-qf-U8P" secondAttribute="bottom" constant="42" id="7Gb-Ay-5hY"/>
+                            <constraint firstItem="rVK-fP-BSE" firstAttribute="bottom" secondItem="28h-mn-BPY" secondAttribute="bottom" constant="231" id="B6a-TE-Mvp"/>
+                            <constraint firstItem="rSt-qf-U8P" firstAttribute="leading" secondItem="rVK-fP-BSE" secondAttribute="leading" constant="20" id="Qk0-5w-PZ7"/>
+                            <constraint firstItem="rVK-fP-BSE" firstAttribute="trailing" secondItem="rSt-qf-U8P" secondAttribute="trailing" constant="20" id="jaT-GA-9Mo"/>
+                            <constraint firstItem="28h-mn-BPY" firstAttribute="leading" secondItem="rVK-fP-BSE" secondAttribute="leading" constant="117" id="jjb-x4-g1s"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JSB-gF-rYj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="6yp-Ia-lby" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="-1033.3333333333335" y="1133.967391304348"/>
         </scene>
     </scenes>
     <resources>
