--- a/SwiftDataAcquisition/Base.lproj/Main.storyboard
+++ b/SwiftDataAcquisition/Base.lproj/Main.storyboard
@@ -215,20 +215,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MQ7-nc-Daj" customClass="BarChartView" customModule="Charts">
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MQ7-nc-Daj" customClass="BarChartView" customModule="Charts">
                                 <rect key="frame" x="20" y="20" width="374" height="379"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="YNv-n8-roW">
+                                <rect key="frame" x="57" y="593" width="300" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <segue destination="M9k-h2-RSg" kind="unwind" unwindAction="handleExitMeasurements:" id="qTh-15-tRW"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="XTR-Sz-H8G"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="YNv-n8-roW" firstAttribute="leading" secondItem="XTR-Sz-H8G" secondAttribute="leading" constant="57" id="SIE-z7-DAi"/>
+                            <constraint firstItem="XTR-Sz-H8G" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="YNv-n8-roW" secondAttribute="bottom" constant="94" id="aku-Qx-6lw"/>
+                            <constraint firstItem="YNv-n8-roW" firstAttribute="top" relation="lessThanOrEqual" secondItem="MQ7-nc-Daj" secondAttribute="bottom" constant="181" id="bge-zb-Vuy"/>
+                            <constraint firstItem="MQ7-nc-Daj" firstAttribute="leading" relation="lessThanOrEqual" secondItem="XTR-Sz-H8G" secondAttribute="leading" constant="20" id="cqs-KH-BDa"/>
+                            <constraint firstItem="MQ7-nc-Daj" firstAttribute="top" secondItem="XTR-Sz-H8G" secondAttribute="top" constant="20" id="ehm-cX-97B"/>
+                            <constraint firstItem="XTR-Sz-H8G" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="MQ7-nc-Daj" secondAttribute="trailing" constant="20" id="lhH-GX-9JC"/>
+                            <constraint firstItem="XTR-Sz-H8G" firstAttribute="trailing" secondItem="YNv-n8-roW" secondAttribute="trailing" constant="57" id="sgT-x5-HZa"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="barChart" destination="MQ7-nc-Daj" id="zjF-F7-MUs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B4E-i0-mHc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="M9k-h2-RSg" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="0.0" y="-334.23913043478262"/>
         </scene>
